# LocalTrace

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CONTEXT.md  DEVELOPING.md  DEVELOPMENT_WORKFLOW.md  README.md  RELEASING.md  WINDOWS_DEV.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
localtrace/: .markdownlint-cli2.yaml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
localtrace/apps/localtrace/localtrace_core/: __init__.py  app.py  config.py  storage.py
localtrace/apps/winprobe/localtrace_winprobe/: __init__.py  probe.py
localtrace/docs/: ARCHITECTURE.md  EVENT_SCHEMA.md  INFRASTRUCTURE.md  ISSUES.md  LOCALTRACE_SPEC.md  PACKAGING.md  WORKFLOW.md  WORKTRACE_CURRENT_SYSTEM.md
localtrace/extension/: README.md  event_builder.mjs  popup.html  popup.js  scope.test.mjs  service_worker.js  service_worker.test.mjs
localtrace/localtrace_packaging/: __init__.py  package_release.py
localtrace/packaging/: build-windows.ps1
localtrace/packaging/launchers/: localtrace_launcher.py  localtrace_winprobe_launcher.py
localtrace/packaging/scripts/: install-localtrace.ps1
localtrace/skill/: README.md  SKILL.md
localtrace/skill/scripts/: localtrace_day_summary.py  localtrace_events_between.py  localtrace_explain_gap.py  localtrace_health.py  localtrace_http.py  localtrace_recent_events.py
localtrace/tests/: test_config.py  test_http_api.py  test_packaging.py  test_skill_scripts.py  test_storage.py  test_winprobe.py
localtrace/web/: README.md  app.js  index.html  styles.css
web/: README.md  (+3 more)
(+56 files in other folders)
