[project]
name = "localtrace"
version = "0.1.4"
requires-python = ">=3.12"
dependencies = [
  'uiautomation>=2.0,<3.0; platform_system == "Windows"',
]

[project.scripts]
localtrace-winprobe = "localtrace_winprobe.__main__:main"

[tool.pytest.ini_options]
pythonpath = [".", "apps/localtrace", "apps/winprobe"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["apps/localtrace", "apps/winprobe", "localtrace_packaging", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
