[project]
name = "localtrace"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["apps/localtrace"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["apps/localtrace", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
